--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GRAPH_URL=cg.optimizely.com
-GRAPH_SINGLE_KEY=
+GRAPH_SINGLE_KEY=jIzatnGH5GMYEYEjcOaRifJF0mjcLypElECJyMes0VGPi1VM
+CMS_URL=app-ocstcmsdemox9b9bt001.cms.optimizely.com/
