--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
+    "@optimizely/react-sdk": "^3.2.4",
     "graphql": "^16.8.1",
     "next": "^15.1.7",
     "react": "^18",
