--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@apollo/client": "^3.10.4",
     "@optimizely/react-sdk": "^3.2.4",
     "graphql": "^16.8.1",
+    "js-cookie": "^3.0.5",
     "next": "^15.1.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
