--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@graphql-codegen/client-preset": "^4.2.6",
     "@graphql-codegen/typescript": "^4.1.3",
     "@parcel/watcher": "^2.4.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
